--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,32 @@
-body{
-  background-color: black;
-  font-family: 'Press Start 2P', cursive;
-
+body, html{
+  height: 100vh;
 }
-h1, h2, h3{
+
+body {
+  background-color: black;
+  font-family: "Press Start 2P", cursive;
+  line-height: 20px;
+}
+h1,
+h2,
+h3 {
   color: white;
-  font-family: 'Press Start 2P', cursive;
+  font-family: "Press Start 2P", cursive;
   text-align: center;
 }
-p{
-  color: #FFCE0A;
-  font-family: 'Press Start 2P', cursive;
+
+h1{
+  line-height: 30px;
+}
+
+p {
+  color: #ffce0a;
+  font-family: "Press Start 2P", cursive;
   text-align: center;
   font-size: 12px;
-
 }
 
-
-.main_div{
+.main_div {
   background-image: url("https://i.imgur.com/kps1C.gif");
   background-size: contain;
   background-repeat: no-repeat;
@@ -27,42 +36,47 @@ p{
   margin: auto;
 }
 
-.content{
+.content {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
 
-.paper{
+.paper {
   background-color: #00000038 !important;
   border: solid white 2px;
   padding: 1rem;
 }
 
-.title_list{
+.title_list {
   color: white;
   padding: 5px 0px;
 }
 
-.title_list:hover{
+.title_list:hover {
   background-color: rgba(255, 255, 255, 0.288);
 }
 
-.details{
+.details, .toc{
   overflow: auto;
-  max-height: 65vh;
+  max-height: 70vh;
 }
 
-.header{
+.header {
   display: flex;
   justify-content: center;
 }
 
-.button_div{
+.button_div {
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 0px;
 }
 
-.c3po, .vader{
+.c3po,
+.vader {
   display: flex;
   justify-content: center;
   background: none;
@@ -73,51 +87,54 @@ p{
   border: none;
   box-shadow: none;
   text-decoration: none;
-  
 }
 
-.c3po img{
+.c3po img {
   width: 100%;
-  filter: invert(100%) sepia(8%) saturate(92%) hue-rotate(
-85deg
-) brightness(115%) contrast(100%);
-transition-duration: .5s;
-};
+  filter: invert(100%) sepia(8%) saturate(92%) hue-rotate(85deg)
+    brightness(115%) contrast(100%);
+  transition-duration: 0.5s;
+}
 
-.c3po:active img{
-  filter: invert(94%) sepia(36%) saturate(6932%) hue-rotate(306deg) brightness(121%) contrast(94%);}
+.c3po:active img {
+  filter: invert(94%) sepia(36%) saturate(6932%) hue-rotate(306deg)
+    brightness(121%) contrast(94%);
+}
 
-.c3po:hover img{
-  filter: invert(90%) sepia(25%) saturate(3950%) hue-rotate(350deg) brightness(101%) contrast(102%);}
+.c3po:hover img {
+  filter: invert(90%) sepia(25%) saturate(3950%) hue-rotate(350deg)
+    brightness(101%) contrast(102%);
+}
 
-.vader img{
+.vader img {
   width: 80%;
-  filter: invert(100%) sepia(0%) saturate(7463%) hue-rotate(306deg) brightness(121%) contrast(100%);
-  transition-duration: .5s;
-
+  filter: invert(100%) sepia(0%) saturate(7463%) hue-rotate(306deg)
+    brightness(121%) contrast(100%);
+  transition-duration: 0.5s;
 }
 
 .vader:hover img {
-  filter: invert(21%) sepia(99%) saturate(6514%) hue-rotate(2deg) brightness(101%) contrast(113%);
+  filter: invert(21%) sepia(99%) saturate(6514%) hue-rotate(2deg)
+    brightness(101%) contrast(113%);
 }
 
-.favorite{
-  color: #FFCE0A;
+.favorite {
+  color: #ffce0a;
   font-size: 15px;
 }
 
-
 @media only screen and (max-width: 768px) {
-h2{
-  font-size: 90%;
-}
-h3{
-  font-size: 70%;
-}
-.c3po, .vader{
-  width: 30%;
-}
-.favorite{
-  font-size: 10px;
-}
+  h2 {
+    font-size: 90%;
+  }
+  h3 {
+    font-size: 70%;
+  }
+  .c3po,
+  .vader {
+    width: 30%;
+  }
+  .favorite {
+    font-size: 10px;
+  }
 }
